--- a/REAL_EshopProjectHosperger/Views/Home/Index.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 style="font-family:Tahoma;" class="display-4">Vítejte na Eshopu AutoZoom</h1>
-    <p><a asp-controller="Car" asp-action="List"> NABÍDKA AUT</a></p>
+    <p><a asp-controller="Car" asp-action="List"> NABÍDKA AUTÍČEK</a></p>
 </div>
+
+
