--- a/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
@@ -30,9 +30,21 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a style="margin-right: 10px;" class="btn btn-outline-primary" asp-controller="Auth" asp-action="Login">Login</a>
-                        </li>
+                        @if (ViewBag.IsAuthenticated)
+                        {
+                            <li class="nav-item d-flex align-items-center">
+                                <span class="navbar-text me-3">Logged in as @ViewBag.Username [@ViewBag.Role]</span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-outline-danger" asp-controller="Auth" asp-action="Logout" style="margin-right:10px;">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="btn btn-outline-primary" asp-controller="Auth" asp-action="Login" style="margin-right:10px;">Login</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="btn btn-outline-info" asp-controller="Auth" asp-action="Register">Register</a>
                         </li>
