--- a/REAL_EshopProjectHosperger/Views/Home/Index.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Home/Index.cshtml
@@ -4,7 +4,9 @@
 
 <div class="text-center">
     <h1 style="font-family:Tahoma;" class="display-4">Vítejte na Eshopu AutoZoom</h1>
-    <p><a asp-controller="Car" asp-action="List"> NABÍDKA AUTÍČEK</a></p>
+    <p class="btn btn-primary"> <a style="text-decoration:none; color:white;" asp-controller="Car" asp-action="List"> NABÍDKA AUTÍČEK</a></p>
+    <p class="btn btn-primary"> <a style="text-decoration:none; color:white;" asp-controller="Car" asp-action="List"> KOŠÍK?</a></p>
+    
 </div>
 
 
