--- a/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
+                <a href="/Home/Index"><img src="/img/logo.png" alt="AutoZoomLogo"  style="height:75px; width:75px; margin:10px;"/></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AutoZoom</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +62,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - REAL_EshopProjectHosperger - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - AutoZoom - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
