Add a Edit akce a nejaky upravy

--- a/REAL_EshopProjectHosperger/Views/Auth/Login.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Auth/Login.cshtml
@@ -12,7 +12,9 @@
     </div>
 }
 
-
+<div>
+    <h1 style="text-align:center; font:500; font-size:xx-large; margin-bottom:20px;">Přihlášení</h1>
+</div>
 
 <form asp-action="Login" class="mt-2 mb-2">
     <div class="row justify-content-center mb-2">
@@ -32,9 +34,12 @@
     <div class="row justify-content-center mb-2">
         <div class="col-5">
             <button type="submit" class="btn btn-sm btn-primary w-100">
-                Login
+                Přihlásit se
             </button>
         </div>
+    </div>
+    <div class ="row justify-content-center mb-2">
+        <a class="align-content-center" href="/Auth/Register"><p style="align-content:center; font:300;">Ještě nemáte svůj účet?</p></a>
     </div>
 </form>
 
