--- a/REAL_EshopProjectHosperger/Views/Auth/Register.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Auth/Register.cshtml
@@ -60,8 +60,9 @@
             </button>
         </div>
     </div>
+    <div class="row justify-content-center mb-2">
+        <a  href="/Auth/Login"><p style="align-content:center; font:300;">Už máte svůj účet?</p></a>
+    </div>
     
 </form>
-<div>
-    <p style="align-content:center; font:300;">Už máte svůj účet? <a href="/Auth/Login">Login</a></p>
-</div>
+
