--- a/REAL_EshopProjectHosperger/Views/Car/Edit.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Car/Edit.cshtml
@@ -1,20 +1,20 @@
 ﻿@using REAL_EshopProjectHosperger.Models.Car
 @model CarViewModel
 @*
-    
+
 *@
 @{
 }
 
 <div>
-    <h1 style="text-align:center; font:500; font-size:xx-large; margin-bottom:20px;">Add Car</h1>
+    <h1 style="text-align:center; font:500; font-size:xx-large; margin-bottom:20px;">Edit</h1>
 </div>
 
 <form asp-action="Add" class=" mt-2 mb-2">
     <div class="row justify-content-center mb-2">
         <label asp-for="Brand" class="col-sm-1 col-form-label">Brand</label>
         <div class="col-sm-4">
-            <input asp-for="Brand" type="text" class="form-control" placeholder="např. Škoda">
+            <input asp-for="Brand" type="text" class="form-control" >
             <span asp-validation-for="Brand" class="text-danger xinvalid-feedback"></span>
         </div>
     </div>
@@ -22,7 +22,7 @@
     <div class="row justify-content-center mb-2">
         <label asp-for="Model" class="col-sm-1 col-form-label">Model</label>
         <div class="col-sm-4">
-            <input asp-for="Model" type="text" class="form-control" placeholder="např. Superb">
+            <input asp-for="Model" type="text" class="form-control" >
             <span asp-validation-for="Model" class="text-danger xinvalid-feedback"></span>
         </div>
     </div>
@@ -30,7 +30,7 @@
     <div class="row justify-content-center mb-2">
         <label asp-for="Image" class="col-sm-1 col-form-label">Image</label>
         <div class="col-sm-4">
-            <input asp-for="Image" class="form-control" placeholder="fotografie auta">
+            <input asp-for="Image" class="form-control" >
             <span asp-validation-for="Image" class="text-danger xinvalid-feedback"></span>
         </div>
 
@@ -39,7 +39,7 @@
     <div class="row justify-content-center mb-2">
         <label asp-for="Description" class="col-sm-1 col-form-label">Description</label>
         <div class="col-sm-4">
-            <input asp-for="Description" type="text" class="form-control" placeholder="např. hnědé auto">
+            <input asp-for="Description" type="text" class="form-control" >
             <span asp-validation-for="Description" class="text-danger xinvalid-feedback"></span>
         </div>
     </div>
@@ -47,7 +47,7 @@
     <div class="row justify-content-center mb-2">
         <label asp-for="Year" class="col-sm-1 col-form-label">Year</label>
         <div class="col-sm-4">
-            <input asp-for="Year" type="number" class="form-control" max="2026" placeholder="např. 2000">
+            <input asp-for="Year" type="number" class="form-control" max="2026" >
             <span asp-validation-for="Year" class="text-danger xinvalid-feedback"></span>
         </div>
     </div>
@@ -55,14 +55,14 @@
     <div class="row justify-content-center mb-2">
         <label asp-for="Price" class="col-sm-1 col-form-label">Price</label>
         <div class="col-sm-4">
-            <input asp-for="Price" type="number" class="form-control" max="9999999" placeholder="např. 250 000">
+            <input asp-for="Price" type="number" class="form-control" max="9999999" >
             <span asp-validation-for="Price" class="text-danger xinvalid-feedback"></span>
         </div>
     </div>
 
     <div class="row justify-content-center mb-2">
         <div class="col-4">
-            <button type="submit" class="btn btn-primary w-100">Přidat</button>
+            <button type="submit" class="btn btn-primary w-100">Editovat</button>
         </div>
     </div>
 
