--- a/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
@@ -24,30 +24,36 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Filter">Filter</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Car" asp-action="List">Cars</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
+
+                        <li class="nav-item">
+                            <a class="btn btn-dark" asp-controller="Car" asp-action="Cart" style="margin-right:10px;">Košík</a>
+                        </li>
+
+
                         @if (ViewBag.IsAuthenticated)
                         {
                             <li class="nav-item d-flex align-items-center">
                                 <span class="navbar-text me-3">Logged in as @ViewBag.Username [@ViewBag.Role]</span>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-danger" asp-controller="Auth" asp-action="Logout" style="margin-right:10px;">Logout</a>
+                                <a class="btn btn-danger" asp-controller="Auth" asp-action="Logout" style="margin-right:10px;">Logout</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="btn btn-outline-primary" asp-controller="Auth" asp-action="Login" style="margin-right:10px;">Login</a>
+                                <a class="btn btn-primary" asp-controller="Auth" asp-action="Login" style="margin-right:10px;">Login</a>
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="btn btn-outline-info" asp-controller="Auth" asp-action="Register">Register</a>
+                            <a style="color:white;" class="btn btn-info" asp-controller="Auth" asp-action="Register">Register</a>
                         </li>
                     </ul>
                 </div>
