--- a/REAL_EshopProjectHosperger/Views/Home/Index.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
 
 <div class="d-flex flex-column align-items-center gap-1">
     <h1 style="font-family:Tahoma;" class="display-4">Vítejte na Eshopu AutoZoom</h1>
-    <p class="btn btn-primary"> <a style="text-decoration:none; color:white;" asp-controller="Car" asp-action="List"> NABÍDKA AUTÍČEK</a></p>
+    <p class="btn btn-primary"> <a style="text-decoration:none; color:white;" asp-controller="Car" asp-action="List"> NABÍDKA AUT</a></p>
+    <p class="btn btn-primary row-cols-1"> <a style="text-decoration:none; color:white;" asp-controller="Brand" asp-action="ListBrand"> NAŠE ZNAČKY AUT</a></p>
     <p class="btn btn-primary row-cols-1"> <a style="text-decoration:none; color:white;" asp-controller="Car" asp-action="List"> KOŠÍK?</a></p>
     <p class="btn btn-primary row-cols-1"> <a style="text-decoration:none; color:white;" asp-controller="Car" asp-action="Filter"> FILTER?</a></p>
     
