--- a/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Filter">Filter</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Brand" asp-action="ListBrand">Brands</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Car" asp-action="List">Cars</a>
                         </li>
                     </ul>
