--- a/REAL_EshopProjectHosperger/Views/Car/List.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Car/List.cshtml
@@ -26,9 +26,9 @@
     <a class="btn btn-sm btn-dark" asp-controller="Car" asp-action="ListOdNejdrazsich">
         seřadit od nejdražších
     </a>
-    <div>
+    <div class="mt-2">
         <form asp-controller="Car" asp-action="Search"  method="post">
-            <input type="text" placeholder="Search.." style="margin-left:5px;">
+            <input type="text" placeholder="Hledejte..." >
             <button type="submit"><i class="fa fa-search">Hledat</i></button>
         </form>
         
