pridani zakladni fotky pri nepridani fotky k autu

--- a/REAL_EshopProjectHosperger/Views/Brand/ListBrand.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Brand/ListBrand.cshtml
@@ -9,7 +9,7 @@
 <table class="table table-hover table-sm text-center mt-2 mb-2">
     <thead class="table-light">
         <tr>
-            <th>Brand</th>
+            <th>Značky aut</th>
         </tr>
     </thead>
     <tbody>
