--- a/REAL_EshopProjectHosperger/Views/Car/Edit.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Car/Edit.cshtml
@@ -9,7 +9,7 @@
 }
 
 <div>
-    <h1 style="text-align:center; font:500; font-size:xx-large; margin-bottom:20px;">Edit</h1>
+    <h1 style="text-align:center; font:500; font-size:xx-large; margin-bottom:20px;">Editace</h1>
 </div>
 
 <form asp-action="Add" class=" mt-2 mb-2">
