--- a/REAL_EshopProjectHosperger/Views/Brand/ListBrand.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Brand/ListBrand.cshtml
@@ -6,20 +6,33 @@
 @{
 }
 
+<h1 style="text-align:center">Naše Značky Aut</h1>
+
+<div style="display:grid; grid-template-columns: 1fr 1fr;margin-top:10px;">
+    
+    @foreach (BrandViewModel brands in Model)
+    {
+
+        <div style="text-align:center;">
+            <div><a asp-controller="Car" asp-action="ListID" asp-route-id="@brands.ID"><img src="/img/brands/@(brands.ID).png" alt="@brands.Brand_" style="height: 100px; margin:5px; text-align:center " /></a></div>
+        </div>
+    }
+
+</div>
+
+
+
+
+
 <table class="table table-hover table-sm text-center mt-2 mb-2">
     <thead class="table-light">
         <tr>
             <th>Značky aut</th>
         </tr>
     </thead>
+    
     <tbody>
 
-        @foreach (BrandViewModel brands in Model) 
-        {
-
-            <tr style="text-align:center;">
-                <td><a asp-controller="Car" asp-action="ListID" asp-route-id="@brands.ID"><img src="/img/brands/@(brands.ID).png" alt="@brands.Brand_" style="height: 125px; margin:5px; text-align:center " /></a></td>
-            </tr>
-        }
+        
     </tbody>
 </table>
