--- a/REAL_EshopProjectHosperger/Views/Car/ListOdNejdrazsich.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Car/ListOdNejdrazsich.cshtml
@@ -33,11 +33,9 @@
     </div>
     <div class="mt-2">
         <form asp-controller="Car" asp-action="Search" method="post">
-            <input type="text" placeholder="Hledejte...">
+            <input type="text" name="searchTerm" placeholder="Hledejte..." />
             <button type="submit" class="btn btn-dark"> Hledat</button>
         </form>
-
-
     </div>
 </div>
 
