--- a/REAL_EshopProjectHosperger/Views/Car/Edit.cshtml
+++ b/REAL_EshopProjectHosperger/Views/Car/Edit.cshtml
@@ -12,7 +12,7 @@
     <h1 style="text-align:center; font:500; font-size:xx-large; margin-bottom:20px;">Editace</h1>
 </div>
 
-<form asp-action="Add" class=" mt-2 mb-2">
+<form asp-action="Edit" class=" mt-2 mb-2">
     <div class="row justify-content-center mb-2">
         <label asp-for="Brand" class="col-sm-1 col-form-label">Brand</label>
         <div class="col-sm-4">
